syntax = "proto3";
package CIS.InternalServices.ServiceDiscovery;

option csharp_namespace = "CIS.InternalServices.ServiceDiscovery.Contracts";

import "DiscoverableService.proto";

message GetServiceRequest {
   string Environment = 1;
   string ServiceName = 2;
   CIS.InternalServices.ServiceDiscovery.ServiceTypes ServiceType = 3;
}

message GetServiceResponse {
   CIS.InternalServices.ServiceDiscovery.DiscoverableService Service = 1;
   string EnvironmentName = 2;
}
